Footprint details filesDateTimeFormat Voucher Validator